[package]
name = "xplat-launcher"
version = "1.0.0"
edition = "2021"
rust-version = "1.82.0"
publish = false
build = "build.rs"

[features]
default = ["cef"]
cef = []

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
log = { version = "0.4.25", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
jni = "0.21.1"
libloading = "0.8.6"
anyhow = { version = "1.0.95", features = ["std", "backtrace"] }
va_list = { version = "0.2.0"}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Services"
] }

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.169"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
native-dialog = "0.7.0"

# `cargo-deny` and `cargo-about` are used in separate build steps
# we don't have to actually build them, but having them in the manifest shows if any updates are available
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "linux")))'.build-dependencies]
cargo-deny = "0.16.2"  # checks licenses and problematic dependencies
cargo-about = "0.6.5"  # generates license report

[build-dependencies]
anyhow = { version = "1.0.95", features = ["std", "backtrace"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
curl = { version = "0.4.47", features = ["static-curl"] }
sha1 = "0.10.6"
winresource = "0.1.19"

[package.metadata.winresource]
CompanyName = "JetBrains s.r.o."
FileDescription = "IntelliJ Platform Windows Launcher"
LegalCopyright = "Copyright 2000-2025 JetBrains s.r.o."
InternalName = "WinLauncher.exe"
OriginalFilename = "WinLauncher.exe"
ProductName = "IntelliJ Platform"

[dev-dependencies]
tempfile = "3.16.0"
