[package]
name = "xplat-launcher"
version = "1.0.0"
edition = "2021"
rust-version = "1.82.0"
publish = false
build = "build.rs"

[features]
default = []
cef = ["dep:curl", "dep:sha1"]

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
log = { version = "0.4.29", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
jni = "0.21.1"
libloading = "0.8.6"
va_list = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging",
  "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_Services"
] }
winreg = "0.55.0"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.182"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
native-dialog = "0.7.0"

[build-dependencies]
anyhow = "1.0.102"
curl = { version = "0.4.49", features = ["static-curl"], optional = true }
sha1 = { version = "0.10.6", optional = true }
winresource = "0.1.30"

[package.metadata.winresource]
CompanyName = "JetBrains s.r.o."
FileDescription = "IntelliJ Platform Windows Launcher"
LegalCopyright = "Copyright 2000-2025 JetBrains s.r.o."
InternalName = "WinLauncher.exe"
OriginalFilename = "WinLauncher.exe"
ProductName = "IntelliJ Platform"

[dev-dependencies]
tempfile = "3.25.0"
