load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  visibility = ["//visibility:public"],
  name = "intellij.platform.boot",
  srcs = glob(['src/**/*.kt', 'src/**/*.java']),
  javac_opts = "//:j11",
  kotlinc_opts = "//:k11",
  plugins = ["@libraries//:serialization_plugin"],
  deps = [
    "@community//platform/util-class-loader:intellij.platform.util.classLoader",
    "@libraries//:annotations",
    "@community//platform/util/zip:intellij.platform.util.zip"
  ]
)
