load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
  visibility = ["//visibility:public"],
  name = "intellij.platform.core",
  srcs = glob(['src/**/*.kt', 'src/**/*.java','resources/**/*.kt', 'resources/**/*.java']),
  javac_opts = "//:j8",
  kotlinc_opts = "//:k8",
  plugins = ["@libraries//:serialization_plugin"],
  deps = [
    "@community//platform/util:intellij.platform.util",
    "@community//platform/extensions:intellij.platform.extensions",
    "@community//platform/util/progress:intellij.platform.util.progress",
    "@community//platform/util/jdom:intellij.platform.util.jdom",
    "@libraries//:kotlin-stdlib",
    "@libraries//:kotlinx-coroutines-core-jvm",
    "@community//platform/util/xmlDom:intellij.platform.util.xmlDom",
    "@community//platform/diagnostic:intellij.platform.diagnostic",
    "@libraries//:kotlinx-collections-immutable-jvm",
    "@community//platform/util/coroutines:intellij.platform.util.coroutines",
    "@libraries//:annotations"
  ]
)
